[#128, #129] Fix overflow, create button (#130)
* [#128] Fix overflow, create button

* Set a minimum width dynamically on crafting handler

* Align recipe name center

* [#131] Remove as many async calls as possible when rendering crafting ui

* Missing description

* Add way to toggle recipe details

---------

--- a/styles/mythacri.css
+++ b/styles/mythacri.css
@@ -264,24 +264,31 @@
   font-family: "Modesto Condensed";
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.mythacri-scripts.crafting .recipe .header .name .create {
+  white-space: nowrap;
+  max-width: 30%;
+  font-size: 20px;
+  font-family: 'Modesto Condensed';
+  padding: 4px;
 }
 .mythacri-scripts.crafting .recipe .header .basic {
   font-style: italic;
   color: gray;
 }
-.mythacri-scripts.crafting .recipe .target {
-  border-top: 2px groove;
-  border-bottom: 2px groove;
-  padding: 0.5em 0;
-  margin-top: 0.5em;
-}
 .mythacri-scripts.crafting .recipe .details {
-  display: flex;
+  display: none;
   gap: 1em;
+}
+.mythacri-scripts.crafting .recipe.expanded .details {
+  display: flex;
 }
 .mythacri-scripts.crafting .recipe .details .description {
   flex: 3;
   font-style: italic;
+  max-width: 60%;
+  overflow: hidden;
 }
 .mythacri-scripts.crafting .recipe .details .components {
   padding-top: 5px;
@@ -331,6 +338,7 @@
 }
 .mythacri-scripts.crafting-handler .header img {
   height: 50px;
+  width: 50px;
   border: none;
 }
 .mythacri-scripts.crafting-handler .components {
@@ -344,6 +352,9 @@
 }
 .mythacri-scripts.crafting-handler .column:not(:last-child) {
   border-right: 2px groove;
+}
+.mythacri-scripts.crafting-handler .column .resources {
+  flex: 1;
 }
 .mythacri-scripts.crafting-handler .components .component-header,
 .mythacri-scripts.crafting-handler .components .component {
@@ -370,6 +381,9 @@
 }
 .mythacri-scripts.crafting-handler .components .component-header .counter {
   color: gray;
+}
+.mythacri-scripts.crafting-handler .components .component-header img {
+  border-radius: 50%;
 }
 .mythacri-scripts.crafting-handler .components .component-header .label {
   font-weight: bold;
